name:                axe
version:             1.0.0
synopsis:            Split massive OSM XML files into legal subfiles.
description:         Split massive OSM XML files into legal subfiles.
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          cwoodbury@azavea.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable axe
  main-is:             Axe.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , optparse-generic >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
                     , streaming >= 0.1 && < 0.2
                     , streaming-bytestring >= 0.1 && < 0.2

  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -O2
